# bofa_scraper

./: .gitignore  README.md  __init__.py  _public.py  _scraping.py  account.py  pyproject.toml  setup.py  transaction.py
bofa_scraper/: __init__.py  account.py  scrape_session.py  transaction.py  util.py
